overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 /*=============== VARIABLES CSS ===============*/
 :root {
@@ -80,7 +80,9 @@
 }
 
 html {
+  width: auto;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body,
