--- a/src/components/preloader/preloader.css
+++ b/src/components/preloader/preloader.css
@@ -1,17 +1,17 @@
 .preloader {
-  height: 110vh;
-  width: 100%;
+  height: 120vh;
+  width: 105vw;
   background: #000;
   color: #fff;
   position: fixed;
-  bottom: 0;
   top: 0;
   right: 0;
+  bottom: 0;
+  left: 0;
   z-index: 55;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
 }
 
 .preloader .texts-container {
